crates/toml/tests/snapshots/invalid/array/no-close-3.stderr
TOML parse error at line 1, column 21
  |
1 | no-close-3 = [42 #]
  |                     ^
unclosed array, expected `]`
